@@ -1,0 +1,54 @@
+/* -*- Mode: C; tab-width: 8; indent-tabs-mode: t; c-basic-offset: 8 -*- */
+/* camel-provider.h :  provider management */
+
+/* 
+ *
+ * Copyright (C) 1999 Bertrand Guiheneuf <Bertrand.Guiheneuf@inria.fr> .
+ *
+ * This program is free software; you can redistribute it and/or 
+ * modify it under the terms of the GNU General Public License as 
+ * published by the Free Software Foundation; either version 2 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+ * USA
+ */
+
+
+#ifndef CAMEL_PROVIDER_H
+#define CAMEL_PROVIDER_H 1
+
+
+#ifdef __cplusplus
+extern "C" {
+#pragma }
+#endif /* __cplusplus }*/
+
+typedef enum {
+	PROVIDER_STORE,
+	PROVIDER_TRANSPORT
+} ProviderType;
+
+
+typedef struct {
+	GtkType object_type;        /* used to create instance of the provider */
+	ProviderType provider_type; /* is a store or a transport */ 
+	GString *protocol;          /* name of the protocol ("imap"/"smtp"/"mh" ...) */
+	GString *provider_name;     /* name of the provider ("Raymond the imap provider") */
+	GString *description;       /* Useful when multiple providers are available for a same protocol */
+} CameProvider;
+
+
+
+#ifdef __cplusplus
+}
+#endif /* __cplusplus */
+
+#endif /* CAMEL_PROVIDER_H */
